Fix render bug on iPhone
[#49003281]

--- a/spring-nanotrader-sencha/src/main/webapp/resources/css/app.css
+++ b/spring-nanotrader-sencha/src/main/webapp/resources/css/app.css
@@ -10996,7 +10996,7 @@ input[type="search"]::-webkit-search-cancel-button {
 
 /* line 30, /Users/pivotal/workspace/springtrader/spring-nanotrader-sencha/src/main/webapp/resources/sass/spring-trader.scss */
 .width-half {
-  width: 50%;
+  width: 49%;
 }
 
 /* line 35, /Users/pivotal/workspace/springtrader/spring-nanotrader-sencha/src/main/webapp/resources/sass/spring-trader.scss */
