--- a/spring-nanotrader-sencha/src/main/webapp/resources/sass/spring-trader.scss
+++ b/spring-nanotrader-sencha/src/main/webapp/resources/sass/spring-trader.scss
@@ -28,7 +28,7 @@
 }
 
 .width-half {
-  width: 50%;
+  width: 49%;
 }
 
 // From spring-nanotrader-web/.../style.css
